=== master

=== 1.0.1

Fix example code in README, add CHANGELOG

=== 1.0.0