@@ -1,6 +1,7 @@
 import React, { Component } from 'react';
 import MuiThemeProvider from 'material-ui/styles/MuiThemeProvider';
 import DemoForm from './DemoForm';
+import { bindState } from 'react-form-base';
 
 export default class App extends Component {
   state = {
@@ -14,11 +15,7 @@ export default class App extends Component {
       <MuiThemeProvider>
         <div className="container">
           <div className="mt-20 mb-20">
-            <DemoForm
-              attrs={this.state.form}
-              onChange={(form) => this.setState({ form })}
-              validateOnChange
-            />
+            <DemoForm {...bindState(this)} />
           </div>
         </div>
       </MuiThemeProvider>
