@@ -1,2 +1,3 @@
 export default from 'react-form-base';
+export Dialog from './utils/Dialog';
 export * from './components';
