@@ -1,5 +1,7 @@
 === master
 
+Refactor DialogForm-related functionality
+
 === 1.0.1
 
 Fix example code in README, add CHANGELOG
